# HAlign-G

./: .gitignore  CMakeLists.txt  LICENSE  README.md  halign-g.filters  halign-g.vcxproj
HAlign-G/: CMakeLists.txt  README.md  halign-g.sln
HAlign-G/src/: Makefile  ztmsa.cpp
HAlign-G/src/PairwiseAlignment/: NeedlemanWunshReusable.cpp
HAlign-G/src/StarAlignment/: StarAligner.cpp
HAlign-G/src/SuffixArray/: divsufsort.h
HAlign-G/src/Utils/: Arguments.cpp  Insertion.cpp  Utils.cpp  sequence.h
HAlign-G/src/multi-thread/: multi.cpp  multi.hpp
HAlign-G/src/multiz/: maf.c  maf.h  speciesTree.c
HAlign-G/tools/: fasta-tongji.cpp  jhtree.py  r.py  shiyan2.py  time_mem.py
HAlign-G/tools/maf-filter/: Makefile
HAlign-G/tools/maf-filter/multiz/: multi_util.c  multiz.c  mz_preyama.c  nib.c  util.c
HAlign-G/tools/ref-sort-maf/multiz/: maf.c  maf.h
HAlign-G/tools/split-maf/multiz/: multi_util.c  mz_preyama.c
HAlign-G2/: CMakeLists.txt  Makefile  ztmsa.cpp
HAlign-G2/SuffixArray/: SuffixArray.hpp
HAlign-G2/Utils/: Arguments.cpp  Arguments.hpp  Insertion.hpp  Pseudo.hpp  Utils.cpp  Utils.hpp  mum_main.cpp  mum_main.hpp  sequence.h
HAlign-G2/multi-thread/: multi.cpp  multi.hpp
HAlign-G2/multiz/: charvec.c  maf.c  maf.h  mz_scores.c  speciesTree.h
HAlign-G2/nucmer/: Makefile
HAlign-G2/nucmer/essaMEM/: fasta.cpp
HAlign-G2/nucmer/mummer/: postnuc.hh
HAlign-G2/nucmer/umd/: nucmer_main.cc
HAlign-G2/nucmer1/: Makefile
HAlign-G2/nucmer1/compactsufsort/: compactsufsort_imp.hpp
HAlign-G2/nucmer1/essaMEM/: sparseSA.cpp  sssort_compact.cc
HAlign-G2/nucmer1/jellyfish/: cooperative_pool2.hpp  whole_sequence_parser.hpp
HAlign-G2/nucmer1/mummer/: nucmer.hpp  redirect_to_pager.hpp
HAlign-G2/nucmer1/thread_pipe/: circular_buffer.hpp  cooperative_pool2.hpp  thread_pipe.hpp
HAlign-G2/nucmer1/tigr/: mgaps.cc
HAlign-G2/nucmer1/umd/: nucmer.cc  nucmer_main.cc
HAlign-G2/nucmerq/: Makefile
HAlign-G2/nucmerq/jellyfish/: circular_buffer.hpp
HAlign-G2/nucmerq/mt_skip_list/: common.hpp  set.hpp
HAlign-G2/nucmerq/tigr/: sw_align.cc
HAlign-G2/nucmerq/umd/: nucmer_main.cc
HAlign-MUM/: .gitignore  CMakeLists.txt  Makefile  mafDuplicateFilter  ztmsa.cpp
HAlign-MUM/PairwiseAlignment/: NeedlemanWunshReusable.cpp
HAlign-MUM/Utils/: CommandLine.hpp  Insertion.cpp  Utils.cpp  Utils.hpp  mum_main.cpp  mum_main.hpp  sequence.h
HAlign-MUM/multi-thread/: multi.cpp  multi.hpp
HAlign-MUM/multiz/: maf.c  maf.h  multiz.c
HAlign-MUM/multiz_bin/: Makefile  mymultiz.cpp
HAlign-MUM/multiz_bin/PairwiseAlignment/: NeedlemanWunshReusable.hpp
HAlign-MUM/multiz_bin/SuffixArray/: divsufsort.h
HAlign-MUM/multiz_bin/Utils/: Arguments.cpp  Arguments.hpp  Utils.cpp  Utils.hpp  mum_main.cpp  mum_main.hpp
HAlign-MUM/multiz_bin/multi-thread/: multi.cpp  multi.hpp
HAlign-MUM/multiz_bin/multiz/: charvec.h  maf.c  maf.h  multi_util.c  multi_util.h  multiz.c  mz_scores.h
HAlign-MUM/nucmer/essaMEM/: mummer.cpp
HAlign-MUM/nucmer/jellyfish/: divisor.hpp
HAlign-MUM/nucmer/mummer/: mgaps.hh
HAlign-MUM/nucmer/tigr/: delta.cc  postnuc.cc  tigrinc.cc  translate.cc
HAlign-MUM/nucmer/umd/: nucmer_main.cc
src/: Makefile
src/PairwiseAlignment/: NeedlemanWunshReusable.hpp
src/StarAlignment/: StarAligner.cpp  StarAligner.hpp
src/SuffixArray/: SuffixArray.hpp
src/Utils/: Arguments.hpp  Insertion.hpp  MurmurHash3.cpp  MurmurHash3.h  Pseudo.hpp  Utils.cpp  Utils.hpp  bloom_filter.hpp
src/multiz/: nib.c  util.c
tools/: cov100w.py  delta2maf.py  dotplot.py  maf-tongji.py  quN.cpp  shiyan1.py  shiyan4.py  simulate.py  xmfa2maf.cpp
tools/fast_read_file/: fast_read_file.cpp  sequence.hpp
tools/maf-filter/: maf-filter.cpp
tools/maf-filter/multiz/: maf.c  maf.h  multiz.h  util.h
tools/maf-tree/: maf-tree.cpp
tools/maf-tree/multiz/: align_util.c  maf.c  maf.h  multiz.c  mz_preyama.h  mz_yama.c
tools/ref-sort-maf/: maf-ref.cpp
tools/split-maf/: split.cpp
tools/split-maf/multiz/: maf.c  maf.h  multiz.h
